name:                cryptopals
version:             0.1.0.0
synopsis:            Exercises from the cryptopals crypto challenges
description:         Please see README.md
homepage:            https://github.com/clevinson/cryptopals#readme
license:             BSD3
author:              Cory Levinson
maintainer:          cjlevinson@gmail.com
copyright:           2016 Cory Levinson
category:            Exercises
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:     lib
  default-language:   Haskell2010
  ghc-options:       -Wall -Werror -fno-warn-unused-do-bind -fwarn-tabs -fno-warn-name-shadowing
  build-depends:      base
  exposed-modules:     Lib
  build-depends:       base
                     , bytestring
                     , containers
                     , hexstring
                     , base64-bytestring
                     , base16-bytestring

executable cryptopals
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:       -Wall -Werror -fno-warn-unused-do-bind -fwarn-tabs -fno-warn-name-shadowing
  build-depends:       base
                     , cryptopals
                     , bytestring
                     , binary
                     , base16-bytestring
  default-language:    Haskell2010
  other-modules:

test-suite cryptopals-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , cryptopals
                     , containers
                     , bytestring
                     , base64-bytestring
                     , binary
                     , random-strings
                     , tasty
                     , tasty-hunit
  ghc-options:       -Wall -Werror -fno-warn-unused-do-bind -fwarn-tabs -fno-warn-name-shadowing
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/clevinson/cyrptopals

